--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,10 +1,12 @@
 {
     "compilerOptions": {
       "target": "es5",
-      "module": "commonjs",
-      "declaration": true,
-      "outDir": "dist",
-      "strict": true
+      "module": "amd",
+      "moduleResolution": "node",
+      //"declaration": true,
+      //"outDir": "dist",
+      "strict": true,
+      "outFile": "./dist/index.js"
     },
     "include": ["src"],
     "exclude": ["node_modules", "**/__tests__/*"]
