--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "GDPR Local Storage",
   "main": "dist/index.js",
-  "types": "dist/index.d.ts", 
+  "types": "dist/index.d.ts",
   "scripts": {
     "test": "jest --config jestconfig.json",
-    "build": "tsc",
+    "build": "rimraf dist && rollup -c rollup.config.js",
     "format": "prettier --write \"src/**/*.ts\"",
     "lint": "eslint . --ext .ts",
     "prepare": "npm run build",
@@ -19,7 +19,12 @@
     "type": "git",
     "url": "git+https://github.com/bmarotta/gdpr-local-storage.git"
   },
-  "keywords": ["GDPR","TCF API","Local Storage","Cookie"],
+  "keywords": [
+    "GDPR",
+    "TCF API",
+    "Local Storage",
+    "Cookie"
+  ],
   "author": "Bruno Marotta",
   "license": "ISC",
   "bugs": {
@@ -34,6 +39,10 @@
     "eslint-config-prettier": "^8.1.0",
     "jest": "^26.6.3",
     "prettier": "2.2.1",
+    "rimraf": "^3.0.2",
+    "rollup": "^2.40.0",
+    "rollup-plugin-typescript2": "^0.30.0",
+    "rollup-plugin-uglify": "^6.0.4",
     "ts-jest": "^26.5.2",
     "typescript": "^4.2.2"
   }
